# SuSG2025-KylinAiAssistant

./: .gitignore  CMakeLists.txt  Kylin-AI-SDK.md  Kylin_AI_SDK.md  LICENSE  README.md  SuSG2025-KylinAiAssistant.pro  SuSG2025-KylinAiAssistant_zh_CN.ts  kylin_ai_sdk_guide.md  kylin_sdk_mini.md  resources.qrc  roles.json  run.sh  基于麒麟操作系统的智能助手赛题介绍.docx
include/: kylin_ai_sdk.h
resources/styles/: main.qss  style.qss
src/: main.cpp  mainwindow.cpp  mainwindow.h
src/chat/: chatwidget.cpp  chatwidget.h
src/core/chat/: chatcore.cpp  chatcore.h
src/core/role/: customrole.cpp  customrole.h  rolemanager.cpp  rolemanager.h
src/core/voice/: voicehandler.cpp  voicehandler.h
src/roles/: rolemanager.cpp  rolemanager.h
src/ui/: chatwindow.cpp  chatwindow.h  chatwindow.ui  customroledialog.cpp  customroledialog.h  customroledialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  rolemanager.ui
src/voice/: voicewidget.cpp  voicewidget.h
